src/objects/blng__BillingPrefix__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__BarPrefix__c</fullName>
        <label>BarPrefix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__DotPrefix__c</fullName>
        <label>DotPrefix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RawPrefix__c</fullName>
        <label>RawPrefix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>BillingPrefix</label>
</CustomObject>